update user-list to display user profile-pictures, reactor message cards to display information correctly, and truncate to chat groups so that way the memebers wouldnt wrap, adjust placement of chat component itself, add router link to not logged in message to redirect user to login page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,39 +3,19 @@
 @import "/sass-variables-mixins/vars.scss";
 @import "/sass-variables-mixins/mixins.scss";
 
-// .heroBgColor {
-//   @include size(500px, 100%);
-//   background-color: white;
-//   .slogan {
-//     margin-top: 140px;
-//     margin-bottom: 40px;
-//     color: $warn-color;
-//     @include font-styles();
-//     @include font-size(36px);
-//     display: flex;
-//     justify-content: center;
-//   }
-
-// }
-
-
-
-// @media only screen and (max-width:768px) {
-//   .slogan {
-//     font-size: 1.7rem;
-//   }
-// }
-
 #toggle-chat {
   height: 65px;
   width: 65px;
   position: fixed;
-  top: calc(20vh + 2px);
+  top: calc(20vh + 1px);
   right: 10px;
-  z-index: 1000px;
   -webkit-transition: right .2s;
+
   &.expanded {
-    right: 302px;    
+    right: 289px;  
+    mat-icon {
+      margin-right: 23px;
+    }
   }
 
   mat-icon {
@@ -47,7 +27,7 @@
   padding: 0px;
   position: fixed;
   top: 20vh;
-  right: -300px;
+  right: -311px;
   width: 300px;
   height: 500px;
   -webkit-transition: right .2s;
@@ -55,12 +35,3 @@
     right: 20px;
   }
 }
-
-/* .mat-tab-header-pagination {
-  display: none;
-}
-
-.mat-tab-label {
-  min-width: calc(250px / 3);
-  padding: 0px;
-} */
